# dit

./: Cargo.toml  LICENSE  README.md  config.toml  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/: problem_matchers.json
anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
bitflags/: all.html  index.html  (+1 more)
clap/: all.html  (+19 more)
dit/: Cargo.toml  all.html  enum.Command.html  fn.install_default_tracing_subscriber.html  fn.run.html  index.html  sidebar-items.js  struct.Args.html
dit-core/: Cargo.toml
dit-core/src/: codec.rs  config.rs  daemon.rs  dit-config.toml  lib.rs  peer.rs  store.rs
dit-core/src/peer/: proto.rs  types.rs
dit-core/tests/: peer.rs
dit/src/: lib.rs  main.rs
(+20646 files in other folders)
