[package]
name = "dit-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
toml = "0.7"
bytes = "1"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "io-util"] }
tempfile = "3"
tracing-subscriber = "0.3"
