[package]
name = "dit"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dit-core = { path = "../dit-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = {version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
